--- a/manifest.yml
+++ b/manifest.yml
@@ -6,5 +6,5 @@ applications:
   buildpack: liberty-for-java
   path: ./target/poi-1.0-SNAPSHOT.zip
   memory: 512M
-  domain: not-used.net
-  host: not-used
+  domain: au-syd.mybluemix.net 
+  host: poi-holloi
